# spot-lite

./: LICENSE  README.md
client/: package-lock.json  package.json
client/src/: App.tsx  custom.scss  index.tsx
client/src/components/: SearchForm.tsx
client/src/pages/: Layout.tsx  Random.tsx  Search.tsx
server/: app.py  pyproject.toml
